vi-mode: fix deadly s/\s*/x/g loop

BUG: 329629
FIXED-IN: 4.13